re PR rtl-optimization/42084 (Wrong result with -Os -fno-delete-null-pointer-checks)

PR rtl-optimization/42084
        * cfgexpand.c (maybe_cleanup_end_of_block): Add new parameter,
        use it to stop walking.
        (expand_gimple_cond): Adjust call to above.

testsuite/
        * gcc.dg/pr42084.c: New test.

From-SVN: r154709